<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="ru.geekbrains.coordinator.MainActivity">

    <item
            android:id="@+id/info_about_author"
            android:orderInCategory="100"
            android:title="@string/info"
            app:showAsAction="never" />
    <item
            android:id="@+id/to_activity3"
            android:orderInCategory="100"
            android:title="@string/name_of_button2"
            app:showAsAction="never" />

    <item
            android:id="@+id/to_activity4"
            android:orderInCategory="100"
            android:title="@string/view_all_city_info"
            app:showAsAction="never" />

</menu>
